# CsvToJson

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
benches/: bench_transform.rs
src/: lib.rs  main.rs  parsing.rs  structs.rs
tests/: main.rs  test.csv
